# freevoice

./: .gitignore  AGENTS.md  CLAUDE.md  INVESTIGATION.md  README.md  REQUIREMENTS.md  index.html  overlay.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  robust-sprouting-milner.md  vite.config.ts
.claude/: settings.local.json
.claude/skills/tag/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  History.tsx  Overlay.tsx  apiEndpoint.ts  apiKeyStore.ts  app.css  azureOpenaiEndpoint.ts  diagLog.ts  errors.ts  langsmithTrace.ts  main.tsx  overlay-main.tsx  overlayReducer.test.ts  overlayReducer.ts  postprocess.ts  settings.css  transcription.ts  types.ts  useSettings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
